--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,19 @@ export(HilbertCurve)
 exportMethods(hc_normal_points)
 exportMethods(zoom)
 exportMethods(hc_text)
+exportMethods(hc_segmented_points)
 exportMethods(hc_layer)
 exportMethods(hc_rect)
-exportMethods(hc_segmented_points)
+exportClasses(HilbertCurve)
+export(HilbertCurve)
 exportMethods(hc_points)
 exportMethods(unzoom)
 
+import(grid)
+import(IRanges)
+import(GenomicRanges)
+importFrom("png", writePNG)
+importFrom("HilbertVis", hilbertCurve)
+importFrom("methods", setClass)
+importFrom("methods", setMethod)
 
