--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: HilbertCurve
 Type: Package
 Title: Make Hilbert Curve
-Version: 1.2.2
+Version: 0.99.0
 Date: 2015-6-17
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
-Depends: R (>= 3.1.2), grid, IRanges
+Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
 Imports: methods, HilbertVis, png
-Suggests: testthat (>= 0.3), knitr, markdown
+Suggests: knitr
 VignetteBuilder: knitr
 Description: Make Hilbert Curve
 biocViews: Software, Visualization, Sequencing
