--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,13 @@ Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
 Imports: methods, HilbertVis, png
-Suggests: knitr, testthat (>= 0.3), circlize, ComplexHeatmap
+Suggests: knitr, testthat (>= 0.3), circlize, ComplexHeatmap (>= 1.2.3), 
+    markdown
 VignetteBuilder: knitr
-Description: Make Hilbert Curve
+Description: Hilbert curve is a type of space-filling curves
+    that fold one dimensional axis into a two dimensional space, 
+    but with still keep the locality. This package aims to provide 
+    a easy and flexible way to visualize data through Hilbert curve.
 biocViews: Software, Visualization, Sequencing
 URL: https://github.com/jokergoo/HilbertCurve
 License: GPL (>= 2)
