--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: HilbertCurve
 Type: Package
-Title: Make Hilbert Curve
+Title: Making Hilbert Curve
 Version: 0.99.0
 Date: 2015-7-10
 Author: Zuguang Gu
