--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Hilbert curve is a type of space-filling curves
     that fold one dimensional axis into a two dimensional space, 
     but with still keep the locality. This package aims to provide 
     a easy and flexible way to visualize data through Hilbert curve.
-biocViews: Software, Visualization, Sequencing
+biocViews: Software, Visualization, Sequencing, Coverage
 URL: https://github.com/jokergoo/HilbertCurve
 License: GPL (>= 2)
 Packaged: 2015-7-10 00:00:00 UTC; Administrator
