--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: HilbertCurve
 Type: Package
-Title: Making Hilbert Curve
+Title: Making 2D Hilbert Curve
 Version: 0.99.0
 Date: 2015-7-10
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
 Imports: methods, HilbertVis, png
-Suggests: knitr, testthat (>= 0.3), circlize, ComplexHeatmap (>= 1.2.3), 
+Suggests: knitr, testthat (>= 0.3), circlize, ComplexHeatmap (>= 1.2.4), 
     markdown
 VignetteBuilder: knitr
 Description: Hilbert curve is a type of space-filling curves
