--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: HilbertCurve
 Type: Package
 Title: Making 2D Hilbert Curve
-Version: 0.99.0
+Version: 0.99.1
 Date: 2015-7-10
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.2), grid, IRanges, GenomicRanges
-Imports: methods, HilbertVis, png
+Imports: methods, HilbertVis, png, grDevices
 Suggests: knitr, testthat (>= 0.3), circlize, ComplexHeatmap (>= 1.2.5), 
     markdown
 VignetteBuilder: knitr
