--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
 Imports: methods, HilbertVis, png, grDevices
-Suggests: knitr, testthat (>= 0.3), circlize, ComplexHeatmap (>= 1.2.5), 
+Suggests: knitr, testthat (>= 0.3), circlize (>= 0.3.1), ComplexHeatmap (>= 1.3.0), 
     markdown
 VignetteBuilder: knitr
 Description: Hilbert curve is a type of space-filling curves
