--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,22 @@
 Package: HilbertCurve
 Type: Package
 Title: Making 2D Hilbert Curve
-Version: 0.99.1
-Date: 2015-7-10
+Version: 0.99.2
+Date: 2015-8-11
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
-Depends: R (>= 3.2), grid, IRanges, GenomicRanges
+Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
 Imports: methods, HilbertVis, png, grDevices
-Suggests: knitr, testthat (>= 0.3), circlize, ComplexHeatmap (>=
-        1.2.5), markdown
+Suggests: knitr, testthat (>= 0.3), circlize (>= 0.3.1), ComplexHeatmap (>= 1.3.0), 
+    markdown
 VignetteBuilder: knitr
-Description: Hilbert curve is a type of space-filling curves that fold
-        one dimensional axis into a two dimensional space, but with
-        still keep the locality. This package aims to provide a easy
-        and flexible way to visualize data through Hilbert curve.
-biocViews: Software, Visualization, Sequencing, Coverage,
-        GenomeAnnotation
+Description: Hilbert curve is a type of space-filling curves
+    that fold one dimensional axis into a two dimensional space, 
+    but with still keep the locality. This package aims to provide 
+    a easy and flexible way to visualize data through Hilbert curve.
+biocViews: Software, Visualization, Sequencing, Coverage, GenomeAnnotation
 URL: https://github.com/jokergoo/HilbertCurve
 License: GPL (>= 2)
+Packaged: 2015-8-11 00:00:00 UTC; Administrator
 Repository: Bioconductor
-Date/Publication: 2015-7-10 00:00:00
-NeedsCompilation: no
+Date/Publication: 2015-8-11 00:00:00
