--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,9 @@ Date: 2015-10-8
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
-Imports: methods, HilbertVis, png, grDevices
-Suggests: knitr, testthat (>= 0.3), circlize (>= 0.3.1), ComplexHeatmap (>= 1.3.0), 
-    markdown
+Imports: methods, HilbertVis, png, grDevices, circlize (>= 0.3.1)
+Suggests: knitr, testthat (>= 0.3), ComplexHeatmap (>= 1.3.0), markdown,
+          RColorBrewer, RCurl
 VignetteBuilder: knitr
 Description: Hilbert curve is a type of space-filling curves
     that fold one dimensional axis into a two dimensional space, 
@@ -20,3 +20,6 @@ License: GPL (>= 2)
 Packaged: 2015-10-8 00:00:00 UTC; Administrator
 Repository: Bioconductor
 Date/Publication: 2015-10-8 00:00:00
+Collate: 00_S4_generic_methods.R
+         HilbertCurve.R
+         GenomicHilbertCurve.R
