--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
 Imports: methods, HilbertVis, png, grDevices, circlize (>= 0.3.1)
 Suggests: knitr, testthat (>= 0.3), ComplexHeatmap (>= 1.3.0), markdown,
-          RColorBrewer, RCurl
+          RColorBrewer, RCurl, GetoptLong
 VignetteBuilder: knitr
 Description: Hilbert curve is a type of space-filling curves
     that fold one dimensional axis into a two dimensional space, 
