chromosomes can only be marked with borders if multiple chromosomes are in one curve

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ export(GenomicHilbertCurve)
 exportMethods(hc_centered_text)
 exportClasses(GenomicHilbertCurve)
 export(GenomicHilbertCurve)
-exportMethods(hc_level)
 exportMethods(hc_segments)
+exportMethods(hc_level)
 export(HilbertCurve)
 exportMethods(zoom)
 exportMethods(hc_text)
@@ -19,6 +19,7 @@ exportMethods(hc_segmented_points)
 exportClasses(HilbertCurve)
 export(HilbertCurve)
 exportMethods(hc_points)
+exportMethods(hc_polygon)
 
 import(grid)
 import(IRanges)
