--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: HilbertCurve
 Type: Package
 Title: Making 2D Hilbert Curve
 Version: 1.1.2
-Date: 2015-12-30
+Date: 2016-1-27
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
@@ -17,9 +17,11 @@ Description: Hilbert curve is a type of space-filling curves
 biocViews: Software, Visualization, Sequencing, Coverage, GenomeAnnotation
 URL: https://github.com/jokergoo/HilbertCurve
 License: GPL (>= 2)
-Packaged: 2015-12-30 00:00:00 UTC; Administrator
+Packaged: 2016-1-27 00:00:00 UTC; Administrator
 Repository: Bioconductor
-Date/Publication: 2015-12-30 00:00:00
+Date/Publication: 2016-1-27 00:00:00
 Collate: 00_S4_generic_methods.R
          HilbertCurve.R
+         hc_polygon.R
+         utils.R
          GenomicHilbertCurve.R
