--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ bioc_packages:
 - GenomicRanges
 
 r_github_packages:
+- jokergoo/GlobalOptions
 - jokergoo/circlize
 - jokergoo/ComplexHeatmap
 - jimhester/covr
