move methods to exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ exportMethods(zoom)
 import(GenomicRanges)
 import(IRanges)
 import(grid)
+import(methods)
 importFrom("HilbertVis", hilbertCurve)
 importFrom("circlize", rand_color)
 importFrom("circlize", read.chromInfo)
@@ -31,5 +32,3 @@ importFrom("grDevices", col2rgb)
 importFrom("png", writePNG)
 importFrom("grDevices", "rgb")
 importFrom("graphics", "hist")
-importFrom("methods", "callNextMethod", "new", "slot", "slot<-",
-             "slotNames", "setMethod", "setClass")
