--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 1.5.2
 Date: 2017-4-16
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
-Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
-Imports: methods, HilbertVis, png, grDevices, circlize (>= 0.3.3)
+Depends: R (>= 3.1.2), methods, grid, IRanges, GenomicRanges
+Imports: HilbertVis, png, grDevices, circlize (>= 0.3.3)
 Suggests: knitr, testthat (>= 1.0.0), ComplexHeatmap (>= 1.13.2), markdown,
           RColorBrewer, RCurl, GetoptLong
 VignetteBuilder: knitr
