--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2017-4-16
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
-Imports: methods, HilbertVis, png, grDevices, circlize (>= 0.3.3)
+Imports: methods, utils, HilbertVis, png, grDevices, circlize (>= 0.3.3)
 Suggests: knitr, testthat (>= 1.0.0), ComplexHeatmap (>= 1.13.2), markdown,
           RColorBrewer, RCurl, GetoptLong
 VignetteBuilder: knitr
