--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,9 @@ Version: 1.11.1
 Date: 2017-4-16
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
-Depends: R (>= 3.1.2), grid, IRanges, GenomicRanges
-Imports: methods, utils, HilbertVis, png, grDevices, circlize (>= 0.3.3)
+Depends: R (>= 3.1.2), grid
+Imports: methods, utils, HilbertVis, png, grDevices, circlize (>= 0.3.3), 
+         IRanges, GenomicRanges
 Suggests: knitr, testthat (>= 1.0.0), ComplexHeatmap (>= 1.13.2), markdown,
           RColorBrewer, RCurl, GetoptLong
 VignetteBuilder: knitr
