--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,37 +1,36 @@
-export(GenomicHilbertCurve)
-export(HilbertCurve)
-export(default_overlay)
-exportClasses(GenomicHilbertCurve)
-export(GenomicHilbertCurve)
-exportClasses(HilbertCurve)
-export(HilbertCurve)
-exportMethods(hc_centered_text)
-exportMethods(hc_layer)
-exportMethods(hc_level)
-exportMethods(hc_map)
-exportMethods(hc_normal_points)
-exportMethods(hc_offset)
-exportMethods(hc_png)
-exportMethods(hc_points)
-exportMethods(hc_polygon)
-exportMethods(hc_rect)
-exportMethods(hc_segmented_points)
-exportMethods(hc_segments)
-exportMethods(hc_text)
-exportMethods(unzoom)
-exportMethods(zoom)
+export("GenomicHilbertCurve")
+export("HilbertCurve")
+export("default_overlay")
+exportClasses("GenomicHilbertCurve")
+export("GenomicHilbertCurve")
+exportClasses("HilbertCurve")
+export("HilbertCurve")
+exportMethods("hc_centered_text")
+exportMethods("hc_layer")
+exportMethods("hc_level")
+exportMethods("hc_map")
+exportMethods("hc_normal_points")
+exportMethods("hc_offset")
+exportMethods("hc_png")
+exportMethods("hc_points")
+exportMethods("hc_polygon")
+exportMethods("hc_rect")
+exportMethods("hc_segmented_points")
+exportMethods("hc_segments")
+exportMethods("hc_text")
+exportMethods("unzoom")
+exportMethods("zoom")
 
 import(GenomicRanges)
 import(IRanges)
 import(grid)
+import(methods)
 importFrom("HilbertVis", hilbertCurve)
 importFrom("circlize", rand_color)
 importFrom("circlize", read.chromInfo)
-importFrom("grDevices", col2rgb)
-importFrom("png", writePNG)
 importFrom("grDevices", "rgb")
+importFrom("grDevices", col2rgb)
 importFrom("graphics", "hist")
-importFrom("methods", "callNextMethod", "new", "slot", "slot<-",
-             "slotNames", "setMethod", "setClass")
+importFrom("png", writePNG)
 importFrom("utils", "packageDescription")
 
