add dependency polylabelr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ import(GenomicRanges)
 import(IRanges)
 import(grid)
 import(methods)
+import(polylabelr)
 importFrom("HilbertVis", hilbertCurve)
 importFrom("circlize", rand_color)
 importFrom("circlize", read.chromInfo)
