--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.1.2), grid
 Imports: methods, utils, HilbertVis, png, grDevices, circlize (>= 0.3.3), 
-         IRanges, GenomicRanges
+         IRanges, GenomicRanges, polylabelr
 Suggests: knitr, testthat (>= 1.0.0), ComplexHeatmap (>= 1.99.0), markdown,
           RColorBrewer, RCurl, GetoptLong
 VignetteBuilder: knitr
