--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-
 language: r
 r: bioc-devel
+r_build_args: --no-manual --no-build-vignettes
+r_check_args: --no-manual --no-build-vignettes --ignore-vignettes
