--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Depends: R (>= 3.1.2), grid
 Imports: methods, utils, HilbertVis, png, grDevices, circlize (>= 0.3.3), 
          IRanges, GenomicRanges, polylabelr
 Suggests: knitr, testthat (>= 1.0.0), ComplexHeatmap (>= 1.99.0), markdown,
-          RColorBrewer, RCurl, GetoptLong
+          RColorBrewer, RCurl, GetoptLong, rmarkdown
 VignetteBuilder: knitr
 Description: Hilbert curve is a type of space-filling curves
     that fold one dimensional axis into a two dimensional space, 
