--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ exportMethods("hc_rect")
 exportMethods("hc_segmented_points")
 exportMethods("hc_segments")
 exportMethods("hc_text")
+exportMethods("hc_which")
 exportMethods("unzoom")
 exportMethods("zoom")
 
@@ -34,5 +35,6 @@ importFrom("grDevices", "rgb")
 importFrom("grDevices", col2rgb)
 importFrom("graphics", "hist")
 importFrom("png", writePNG)
-importFrom("utils", "packageDescription")
 importFrom("stats", "aggregate")
+importFrom("utils", "packageDescription")
+
