--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,1 +1,18 @@
 destination: docs
+
+navbar:
+  title: "HilbertCurve"
+  left:
+    - text: "Articles"
+      menu:
+        - text: Vignettes
+        - text: "Making 2D Hilbert Curve"
+          href: articles/hc_general.html
+        - text: "Making Genome-level Hilbert Curve"
+          href: articles/hc_genome.html
+    - text: "Reference"
+      href: reference/index.html
+
+template:
+  includes:
+    after_body: "<style>nav[data-toggle='toc'] .nav .nav {display: block;}</style>"
