--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -39,6 +39,5 @@ vignettes/move-on-hilbert-curve-.webm
 vignettes/cpan.Rmd
 vignettes/examples.Rmd
 vignettes/data
-.o
-.so
-
+^src/.*\.o$
+^src/.*\.so$
