--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: HilbertCurve
 Type: Package
 Title: Making 2D Hilbert Curve
-Version: 1.99.1
-Date: 2024-09-12
+Version: 1.99.2
+Date: 2024-10-08
 Authors@R: person("Zuguang", "Gu", email = "z.gu@dkfz.de", role = c("aut", "cre"),
                   comment = c('ORCID'="0000-0002-7395-8709"))
 Depends: R (>= 4.0.0), grid
@@ -16,7 +16,7 @@ Description: Hilbert curve is a type of space-filling curves
     but with still preserves the locality. This package aims to provide 
     an easy and flexible way to visualize data through Hilbert curve.
 biocViews: Software, Visualization, Sequencing, Coverage, GenomeAnnotation
-URL: https://github.com/jokergoo/HilbertCurve, https://jokergoo.github.io/HilbertCurve
+URL: https://github.com/jokergoo/HilbertCurve, https://jokergoo.github.io/HilbertCurve/
 License: MIT + file LICENSE
 LinkingTo: Rcpp
 Collate: 00_S4_generic_methods.R
